[package]
name = "mcp_mapping_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
serde = "*"
serde_json = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
env_logger = "*"
